<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".activities.MainActivity">

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navMenu"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:menu="@menu/navigation_menu"
        android:background="@color/colorPrimary"/>

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".activities.MainActivity">
    <ImageView
        android:id="@+id/imageDrawerToggle"
        android:layout_width="@dimen/_40sdp"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginHorizontal="@dimen/_12sdp"
        android:contentDescription="@string/app_name"
        android:padding="@dimen/_5sdp"
        android:src="@drawable/ic_menu"
        app:tint="@color/colorIcons"
        app:layout_constraintTop_toTopOf="@+id/textMyNotes"
        app:layout_constraintBottom_toBottomOf="@+id/textMyNotes"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/textMyNotes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_12sdp"
        android:includeFontPadding="false"
        android:text="@string/notes"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="@dimen/_20ssp"
        app:layout_constraintStart_toEndOf="@+id/imageDrawerToggle"
        app:layout_constraintTop_toTopOf="parent"
        />
    <com.google.android.material.materialswitch.MaterialSwitch
        android:id="@+id/switchShowDeleted"
        android:layout_width="@dimen/_40sdp"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginEnd="@dimen/_12sdp"
        app:thumbIcon="@drawable/ic_delete"
        app:thumbIconTint="@color/colorAccent"
        app:thumbTint="@color/colorWhite"
        app:trackTint="@color/colorAccent"
        app:trackDecoration="@null"

        app:layout_constraintBottom_toBottomOf="@+id/textMyNotes"
        app:layout_constraintEnd_toStartOf="@id/imageCollaborators"
        app:layout_constraintTop_toTopOf="@+id/textMyNotes"

        />
    <ImageView
        android:id="@+id/imageCollaborators"
        android:layout_width="@dimen/_30sdp"
        android:layout_height="@dimen/_30sdp"
        android:layout_marginEnd="@dimen/_12sdp"
        android:contentDescription="@string/app_name"
        android:padding="@dimen/_4sdp"
        android:src="@drawable/ic_add_user"
        app:tint="@color/colorIcons"
        app:layout_constraintBottom_toBottomOf="@+id/textMyNotes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textMyNotes"
        />
    <LinearLayout
        android:id="@+id/layoutSearch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:background="@drawable/background_search"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingStart="@dimen/_10sdp"
        android:paddingEnd="@dimen/_10sdp"
        app:layout_constraintTop_toBottomOf="@id/textMyNotes">

        <ImageView
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_search"
            app:tint="@color/colorSearchIcon"/>

        <EditText
            android:id="@+id/inputSearch"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_37sdp"
            android:layout_marginStart="@dimen/_12sdp"
            android:background="@null"
            android:hint="@string/search_notes"
            android:imeOptions="actionDone"
            android:importantForAutofill="no"
            android:includeFontPadding="false"
            android:inputType="text"
            android:textColor="@color/colorPrimaryDark"
            android:textColorHint="@color/colorTextHint"
            android:textSize="@dimen/_13ssp"
            />

    </LinearLayout>
    
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/notesRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/_2sdp"
        android:layout_marginEnd="@dimen/_2sdp"
        android:clipToPadding="false"
        android:paddingHorizontal="0dp"
        android:paddingBottom="@dimen/_12sdp"
        app:layout_constraintBottom_toTopOf="@id/imageAddNote"
        app:layout_constraintTop_toBottomOf="@id/layoutSearch"
        />
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/deletedNotesRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/_2sdp"
        android:layout_marginEnd="@dimen/_2sdp"
        android:clipToPadding="false"
        android:paddingHorizontal="0dp"
        android:paddingBottom="@dimen/_12sdp"
        app:layout_constraintBottom_toTopOf="@id/imageAddNote"
        app:layout_constraintTop_toBottomOf="@id/layoutSearch"
        android:visibility="gone"
        />
    
    <ImageView
        android:id="@+id/imageAddNote"
        android:layout_width="@dimen/_40sdp"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginEnd="@dimen/_15sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:background="@drawable/background_add_button"
        android:contentDescription="@string/app_name"
        android:padding="@dimen/_5sdp"
        android:src="@drawable/ic_add"
        app:tint="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>
</androidx.drawerlayout.widget.DrawerLayout>